# collectors

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING-COLLECTOR.md  CONTRIBUTING.md  Dockerfile_ubi9  README.md  build_all_ubi9.sh  build_ubi9.sh  pyproject.toml  renovate.json  run_test.sh
ai-guardrail/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
ai-guardrail/ai_guardrail/: clients.py  config.yml.sample  openaev_ai_guardrail.py
atomic-red-team/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
atomic-red-team/atomic_red_team/: __init__.py  config.yml.sample  openaev_atomic_red_team.py  openaev_security_domain.py  openbas_atomic_red_team.py
aws-resources/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
aws-resources/aws_resources/: config.yml.sample  openaev_aws_resources.py  openbas_aws_resources.py
cisco-ai-defense/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
cisco-ai-defense/cisco_ai_defense/: client.py  config.yml.sample  openaev_cisco_ai_defense.py
cisco-ai-defense/tests/: test_client.py
collectors-sdk/: .gitignore  README.md  pyproject.toml
collectors-sdk/collectors_sdk/: __init__.py
collectors-sdk/docs/: base-collector.md  basic-engine.md  writing-a-collector.md
collectors-second-sdk/: README.md  pyproject.toml
collectors-second-sdk/collectors_second_sdk/: __init__.py
collectors-second-sdk/docs/: base-collector.md  basic-engine.md  writing-a-collector.md
crowdstrike/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
crowdstrike/crowdstrike/: __init__.py  config.yml.sample  crowdstrike_api_handler.py  openaev_crowdstrike.py  openbas_crowdstrike.py
crowdstrike/test/: test_openbas_crowdstrike.py  test_pattern_disposition.py
google-workspace/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
google-workspace/google_workspace/: __init__.py  config.yml.sample  openaev_google_workspace.py  openbas_google_workspace.py
hiddenlayer/: .dockerignore  .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
hiddenlayer/hiddenlayer/: client.py  config.yml.sample  openaev_hiddenlayer.py
hiddenlayer/tests/: test_client.py
lakera-guard/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
lakera-guard/lakera_guard/: client.py  config.yml.sample  openaev_lakera_guard.py
microsoft-azure/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
microsoft-azure/microsoft_azure/: config.yml.sample  openaev_microsoft_azure.py  openbas_microsoft_azure.py
microsoft-defender/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
microsoft-defender/microsoft_defender/: config.yml.sample  openaev_microsoft_defender.py  openbas_microsoft_defender.py
microsoft-defender/tests/: test_openaev_microsoft_defender.py
microsoft-entra/: .dockerignore  .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
microsoft-entra/microsoft_entra/: config.yml.sample  openaev_microsoft_entra.py  openbas_microsoft_entra.py
microsoft-intune/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
microsoft-intune/microsoft_intune/: config.yml.sample  openaev_microsoft_intune.py  openbas_microsoft_intune.py
microsoft-sentinel/: .dockerignore  .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
microsoft-sentinel/microsoft_sentinel/: api_handler.py  config.yml.sample  openaev_microsoft_sentinel.py  openbas_microsoft_sentinel.py
mitre-atlas/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
mitre-atlas/mitre_atlas/: config.yml.sample  openaev_atlas.py
mitre-attack/: .build.env  .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
mitre-attack/mitre_attack/: __init__.py  config.yml.sample  openaev_mitre.py  openbas_mitre.py
nvd-nist-cve/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
nvd-nist-cve/nvd_nist_cve/: config.yml.sample  nvd_nist_cve_api_handler.py  nvd_nist_cve_collector.py  nvd_nist_cve_configuration.py  openaev_nvd_nist_cve.py
nvd-nist-cve/tests/: test_nvd_nist_cve_collector.py  test_nvd_nist_cve_configuration.py
openaev/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  config.yml.back  docker-compose.yml  manifest-metadata.json  pyproject.toml
palo-alto-cortex-xdr/: .build.env  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
palo-alto-cortex-xsoar/: .gitignore  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
prisma-airs/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
prompt-security/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
splunk-es/: Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
tanium-threat-response/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
template/: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
wazuh/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
xtm-one/: .env.sample  Dockerfile  Dockerfile_ubi9  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
(+646 files in other folders)
