[tool.poetry]
name = "collectors"
version = "2.260715.0"
description = "A collection of Collectors for interfacing with security software"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra != 'dev'", version = "2.260715.0", source = "pypi" },
    { markers = "extra == 'dev'", path = "../client-python", develop = true },
]

[tool.poetry.dependencies.openaev-atomic-red-team-collector]
path = "./atomic-red-team"

[tool.poetry.dependencies.openaev-crowdstrike-collector]
path = "./crowdstrike"

[tool.poetry.dependencies.openaev-microsoft-defender-collector]
path = "./microsoft-defender"

[tool.poetry.dependencies.openaev-microsoft-entra-collector]
path = "./microsoft-entra"

[tool.poetry.dependencies.openaev-microsoft-sentinel-collector]
path = "./microsoft-sentinel"

[tool.poetry.dependencies.openaev-mitre-attack-collector]
path = "./mitre-attack"

[tool.poetry.dependencies.openaev-nvd-nist-cve-collector]
path = "./nvd-nist-cve"

[tool.poetry.dependencies.openaev-tanium-threat-response-collector]
path = "./tanium-threat-response"

[tool.poetry.extras]
dev = []

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
