[tool.poetry]
name = "openaev-ai-guardrail-collector"
version = "2.260615.0"
description = "A Collector validating AI defense (LLM firewall / guardrail) detection and prevention of AI adversarial injects"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "ai_guardrail" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.260615.0", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m ai_guardrail.openaev_ai_guardrail --dump-config-schema"
icon-path = "ai_guardrail/img/icon-ai-guardrail.png"
