[tool.poetry]
name = "openaev-atomic-red-team-collector"
version = "2.1.2"
description = "A Collector for fetching Atomic Red Team payloads; https://www.atomicredteam.io/"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "atomic_red_team" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.1.2", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m atomic_red_team.openaev_atomic_red_team --dump-config-schema"
icon-path = "atomic_red_team/img/icon-atomic-red-team.png"