[tool.poetry]
name = "openaev-atomic-red-team-collector"
version = "2.260715.0"
description = "A Collector for fetching Atomic Red Team payloads; https://www.atomicredteam.io/"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "atomic_red_team" },
]

[tool.poetry.dependencies]
python = "^3.11"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260715.0"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m atomic_red_team.openaev_atomic_red_team --dump-config-schema"
icon-path = "atomic_red_team/img/icon-atomic-red-team.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
