[tool.poetry]
name = "openaev-aws-resources-collector"
version = "2.1.4"
description = "A Collector for AWS Resources (EC2 Instances)"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "aws_resources" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.1.4", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
boto3 = "1.40.21"
botocore = "1.40.21"

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m aws_resources.openaev_aws_resources --dump-config-schema"
icon-path = "aws_resources/img/icon-aws-resources.png"
