[tool.poetry]
name = "openaev-cisco-ai-defense-collector"
version = "2.260623.0"
description = "A Collector validating Cisco AI Defense (Robust Intelligence) detection/prevention of AI adversarial injects"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "cisco_ai_defense" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.260623.0", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m cisco_ai_defense.openaev_cisco_ai_defense --dump-config-schema"
icon-path = "cisco_ai_defense/img/icon-cisco-ai-defense.png"
