[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collectors-sdk"
version = "0.1.0"
description = "OpenAEV Collectors SDK — Base collector, engine, and extension framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-slugify[unidecode]>=8.0,<9.0",
    "thefuzz>=0.22,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["collectors_sdk"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["collectors_sdk"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["collectors_sdk"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = ["integration: marks tests as integration tests"]
