[tool.poetry]
name = "openaev-crowdstrike-collector"
version = "2.1.2"
description = "Collector for Crowdstrike Falcon"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "crowdstrike" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.1.2", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
crowdstrike-falconpy = "1.5.4"
pydantic = "2.11.7"

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m crowdstrike.openaev_crowdstrike --dump-config-schema"
icon-path = "crowdstrike/img/icon-crowdstrike.png"