[tool.poetry]
name = "openaev-crowdstrike-collector"
version = "2.260716.0"
description = "Collector for Crowdstrike Falcon"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "crowdstrike" },
]

[tool.poetry.dependencies]
python = "^3.11"
crowdstrike-falconpy = "1.5.4"
pydantic = "^2.11.7"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260716.0"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m crowdstrike.openaev_crowdstrike --dump-config-schema"
icon-path = "crowdstrike/img/icon-crowdstrike.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
