[tool.poetry]
name = "openaev-google-workspace-collector"
version = "2.260704.0"
description = "A Collector for Google Workspace user and group management"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "google_workspace" },
]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260704.0"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m google_workspace.openaev_google_workspace --dump-config-schema"
icon-path = "google_workspace/img/icon-google-workspace.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
