[tool.poetry]
name = "openaev-hiddenlayer-collector"
version = "2.260708.1"
description = "A Collector validating HiddenLayer AI Runtime Security (AIDR) detection/prevention of AI adversarial injects"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "hiddenlayer" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260708.1"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m hiddenlayer.openaev_hiddenlayer --dump-config-schema"
icon-path = "hiddenlayer/img/icon-hiddenlayer.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
