[tool.poetry]
name = "openaev-microsoft-azure-collector"
version = "2.1.4"
description = "A Collector for Microsoft Azure Virtual Machines"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_azure" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.1.4", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
msal = "1.31.1"
requests = "2.32.3"

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m microsoft_azure.openaev_microsoft_azure --dump-config-schema"
icon-path = "microsoft_azure/img/icon-microsoft-azure.png"

