[tool.poetry]
name = "openaev-microsoft-entra-collector"
version = "2.1.1"
description = "A Collector for Microsoft Entra asset management system"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_entra" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.1.1", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
msgraph-sdk = "1.40.0"

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m microsoft_entra.openaev_microsoft_entra --dump-config-schema"
icon-path = "microsoft_entra/img/icon-microsoft-entra.png"

