[tool.poetry]
name = "openaev-microsoft-entra-collector"
version = "2.260716.1"
description = "A Collector for Microsoft Entra asset management system"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_entra" },
]

[tool.poetry.dependencies]
python = "^3.11"
msgraph-sdk = "1.40.0"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260716.1"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m microsoft_entra.openaev_microsoft_entra --dump-config-schema"
icon-path = "microsoft_entra/img/icon-microsoft-entra.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
