[tool.poetry]
name = "openaev-microsoft-intune-collector"
version = "2.0.14"
description = "A Collector for Microsoft Intune managed devices"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_intune" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.0.14", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
msal = "1.31.1"
requests = "2.32.3"

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m microsoft_intune.openaev_microsoft_intune --dump-config-schema"
icon-path = "microsoft_intune/img/icon-microsoft-intune.png"
