[tool.poetry]
name = "openaev-microsoft-sentinel-collector"
version = "2.260708.1"
description = "A Collector for Microsoft Sentinel SIEM solution"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_sentinel" },
]

[tool.poetry.dependencies]
python = "^3.11"
msal = "1.33.0"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260708.1"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m microsoft_sentinel.openaev_microsoft_sentinel --dump-config-schema"
icon-path = "microsoft_sentinel/img/icon-microsoft-sentinel.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
