[tool.poetry]
name = "openaev-mitre-attack-collector"
version = "2.0.4"
description = "A Collector for fetching MITRE ATT&CK taxonomies; https://attack.mitre.org/"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "mitre_attack" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.0.4", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
