[tool.poetry]
name = "openaev-nvd-nist-cve-collector"
version = "2.0.4"
description = "Collector for retrieve CVE from NVD by Nist"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "nvd_nist_cve"}]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.0.4", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m nvd_nist_cve.openaev_nvd_nist_cve --dump-config-schema"
icon-path = "nvd_nist_cve/img/icon-nist.png"
slug = "openaev_nvd_nist_cve"
title="NVD Nist CVE"
container_type="COLLECTOR"
short_description="The NVD NIST CVE collector is a standalone Python process that collects data from the NVD (National Vulnerability Database)."



