[tool.poetry]
name = "openaev-nvd-nist-cve-collector"
version = "2.260703.2"
description = "Collector for retrieve CVE from NVD by Nist"
authors = [
    "Filigran <contact@filigran.io>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "nvd_nist_cve" },
]

[tool.poetry.dependencies]
python = "^3.11"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'prod' and extra != 'dev'"
version = "2.260703.2"
source = "pypi"

[[tool.poetry.dependencies.pyoaev]]
markers = "extra == 'dev' and extra != 'prod'"
path = "../../client-python"
develop = true

[tool.poetry.extras]
prod = [
    "pyoaev",
]
dev = [
    "pyoaev",
]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m nvd_nist_cve.openaev_nvd_nist_cve --dump-config-schema"
icon-path = "nvd_nist_cve/img/icon-nist.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
